--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        The <b>Awesome Research Group</b> at <b>Example U</b> does all sorts of
-        research. Here is a place where we tell you exactly what that is!
+        The <b>4DSpace Research Group</b> at the <b>Faculty of Mathematics and Natural Sciences</b>, <b>University of Oslo</b>. It is an inderdisciplinary centre combining Departments of Physics, Informatics, and Mathematics.
+
+Our goal is to understand the role of plasma instabilities and turbulence in the energy transfer, transport and coupling between different scales in the near Earth space.
+
+We work with integrated studies of ionospheric plasma and our focus is on multi-point, multi-scale 4D (3D in space and time) studies with a new generation sounding rockets and satellites.
     </p>
 </div>
 
