--- a/people.html
+++ b/people.html
@@ -3,11 +3,11 @@ layout: default
 title: People
 
 picture-role-groups:
-- {roles: [faculty, postdoc, staff], width: 4}
-- {roles: [grad], width: 8}
+- {roles: [faculty, engineer, researcher, postdoc], width: 4}
+- {roles: [phd], width: 8}
 
 no-picture-role-groups:
-- {roles: [collab, ugrad, ugrad-alum], width: 5}
+- {roles: [collab, master, master-alum], width: 5}
 - {roles: [alum], width: 7}
 ---
 
