--- a/people.html
+++ b/people.html
@@ -3,8 +3,8 @@ layout: default
 title: People
 
 picture-role-groups:
-- {roles: [faculty, engineer, researcher, postdoc], width: 6}
-- {roles: [phd], width: 6}
+- {roles: [faculty, engineer, researcher], width: 6}
+- {roles: [ postdoc, phd], width: 6}
 
 no-picture-role-groups:
 - {roles: [collab, master, master-alum], width: 5}
