--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@ role-tables:
     image: false
 
 ---
+<!-- <div class="jumbotron">
+    <p>
+ <img src="/img/cover.jpeg" alt="">
+    </p>
+</div> -->
 
+<div class="w3-content w3-display-container" style="max-width:800px">
+  <img class="mySlides" src="/img/cover.jpeg" style="width:100%">
+  <img class="mySlides" src="/img/cover2.jpeg" style="width:100%">
+  <img class="mySlides" src="/img/cover2.jpeg" style="width:100%">
+  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+  </div>
+</div>
 <div class="jumbotron">
     <p>
         The <b>4DSpace Research Group</b> at the <b>Faculty of Mathematics and Natural Sciences</b>, <b>University of Oslo</b>. It is an inderdisciplinary centre combining Departments of Physics, Informatics, and Mathematics.
