people info update

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ role-tables:
     image: false
 
 ---
-<!-- <div class="jumbotron">
+<div class="jumbotron">
     <p>
  <img src="/img/cover.jpeg" alt="">
     </p>
-</div> -->
+</div>
 
 
 <div class="jumbotron">
