people info update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: front
 title: Home
 notitle: true
+image: "/img/cover.jpeg"
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
@@ -19,9 +20,9 @@ role-tables:
     image: false
 
 ---
-<div class="jumbotron">
+<!-- <div class="jumbotron">
  <img src="/img/cover.jpeg" alt="">
-</div>
+</div> -->
 
 
 <div class="jumbotron">
