people info update

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ role-tables:
  <img src="/img/cover.jpeg" alt="">
 </div> -->
 
+<!-- <div class="containertop">
+<img style="float: left; margin-right: 1em"
+src="{{ site.base }}/img/cover.jpeg" alt="cover" />
+</div> -->
 
 <div class="jumbotron">
     <p>
