people info update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ role-tables:
 - - roles: [faculty, engineer, researcher]
     width: 6
     image: true
-  - roles: [postdoc, phd]
+  - roles: [emeritus, postdoc, phd]
     width: 6
     image: true
 - - roles: [collab, master, master-alum]
