--- a/people.html
+++ b/people.html
@@ -4,7 +4,7 @@ title: People
 
 picture-role-groups:
 - {roles: [faculty, engineer, researcher], width: 6}
-- {roles: [postdoc, phd], width: 6}
+- {roles: [emeritus, postdoc, phd], width: 6}
 
 no-picture-role-groups:
 - {roles: [collab, master, master-alum], width: 5}
