--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: front
-title: Home
-notitle: true
+title: 4DSpace Research Group
+notitle: false
 
 
 # groups of columns of {roles: list, width: num, image: bool}
