--- a/facilities.html
+++ b/facilities.html
@@ -1,10 +1,38 @@
 ---
 layout: default
-title: Facilities and Instrumentation
+title: Research Facilities
 ---
 
 <div class="jumbotron">
     <p>
-        At <b>4DSpace Research Group</b>, we have built several observational facilities and developed unique instruments.
+        At <b>4DSpace Research Group</b>, we have built several observational facilities and developed unique instruments to understand instabilities and turbulence in the polar ionosphere.
+    </p>
+</div>
+
+<section>
+    <h2>Troll Station</h2>
+        <p>
+        More about Troll station.
+        </p>
+</section>
+
+<section>
+    <h2>Svalbard</h2>
+        <p>
+        More about Svalbard.
+        </p>
+</section>
+
+<section>
+    <h2>Multi-Needle Langmuir Probes (MNLP)</h2>
+    <p>
+    Multi-Needle Langmuir Probes (MNLP) measure electron density in plasma on various space probes, e.g. on the ICI rocket series.
+    <img src="https://www.mn.uio.no/fysikk/english/research/projects/4dspace/photos_index/mnlp_white.jpeg" width="60%" height="60%">
+    </p>
+</section>
+
+<div class="jumbotron">
+    <p>
+    Page under construction!!
     </p>
 </div>
