--- a/publications.html
+++ b/publications.html
@@ -6,4 +6,7 @@ title: Publications
     <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
 </p>
 
+<p>
+    <a href="{{ site.base }}/bib/pubs.conf"> </a>
+</p>
 {% include pubs.html %}
