--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,10 @@ title: Publications
     <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
 </p>
 
+---
+layout: default
+title: Conference Proceedings
+---
 <p>
     <a href="{{ site.base }}/bib/pubs.conf"> </a>
 </p>
