--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,8 @@ title: Publications
     <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
 </p>
 
-
+---
+layout: default
 title: Conference Proceedings
 
 <p>
