--- a/publications.html
+++ b/publications.html
@@ -6,11 +6,5 @@ title: Publications
     <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
 </p>
 
----
-layout: default
-title: Conference Proceedings
-
-<p>
-    <a href="{{ site.base }}/bib/pubs.conf"> </a>
-</p>
-{% include pubs.html %}
+<h2>Conference Proceedings</h2>
+<p>Conference name, date, location</p>
