--- a/facilities.html
+++ b/facilities.html
@@ -13,6 +13,20 @@ title: Research Facilities
     <h2>Troll Station</h2>
         <p>
         More about Troll station.
+       <br> 
+            <img src="https://4dspace-uio.github.io/4dspaceweb/img/sydpolen.jpg" width="60%" height="60%"> 
+       </br>  
+            We invite you to read the interesting travel notes "Journey to Antarctica" by Prof. Wojciech J. Miloch:
+            <a href="Journey to Antarctica">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica.html</a>
+            <a href="Journey to Antarctica - second update">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-2.html</a>
+            <a href="#Journey to Antarctica - part three">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-three.html</a>
+            <a href="#Journey to Antarctica - part four">https://www.titan.uio.no/blogg/forskerbloggen/2022/journey-antarctica-part-four.html</a>
+            <a href="#Finishing our work in Antarctica">https://www.titan.uio.no/blogg/forskerbloggen/2022/finishing-our-work-antarctica.html</a>
+            <a href="#What happened in between in Antarctica?">https://www.titan.uio.no/blogg/forskerbloggen/2022/what-happened-between-antarctica.html</a>
+            <a href="#A physicist in Antarctica">https://www.titan.uio.no/blogg/forskerbloggen/2022/physicist-antarctica.html</a>
+            <a href="#Settling in at Tor station">https://www.titan.uio.no/blogg/forskerbloggen/2022/settling-tor-station.html</a>
+            <a href="#Birds in the icecold and life at a field-station">https://www.titan.uio.no/blogg/forskerbloggen/2022/life-field-station.html</a>
+            <a href="#Heading back home">https://www.titan.uio.no/blogg/forskerbloggen/2022/heading-back-home.html</a>
         </p>
 </section>
 
