--- a/publications.html
+++ b/publications.html
@@ -9,4 +9,6 @@ title: Publications
 {% include pubs.html %}
 
 <h2>Conference Proceedings</h2>
-<p>Conference name, date, location</p>
+<p>
+    <a href="{{ site.base }}/bib/pubs.conf"> </a>
+</p>
