--- a/publications.html
+++ b/publications.html
@@ -9,3 +9,10 @@ title: Publications
 {% include pubs.html %}
 
 
+
+<!-- 
+
+<h2>Conference Proceedings</h2>
+<p>
+    <a href="{{ site.base }}/bib/pubs.conf"> </a>
+</p> -->
