--- a/facilities.html
+++ b/facilities.html
@@ -17,6 +17,7 @@ title: Research Facilities
             <img src="https://4dspace-uio.github.io/4dspaceweb/img/sydpolen.jpg" width="60%" height="60%"> 
        </br>  
             We invite you to read the interesting travel notes "Journey to Antarctica" by Prof. Wojciech J. Miloch:
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica.html" target = "_blank">Journey to Antarctica</a>
             <a "Journey to Antarctica" https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica.html </a>
             <a href="Journey to Antarctica - second update">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-2.html</a>
             <a href="#Journey to Antarctica - part three">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-three.html</a>
