--- a/facilities.html
+++ b/facilities.html
@@ -18,16 +18,15 @@ title: Research Facilities
        </br>  
             We invite you to read the interesting travel notes "Journey to Antarctica" by Prof. Wojciech J. Miloch:
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica.html" target = "_blank">Journey to Antarctica</a>
-            <a "Journey to Antarctica" https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica.html </a>
-            <a href="Journey to Antarctica - second update">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-2.html</a>
-            <a href="#Journey to Antarctica - part three">https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-three.html</a>
-            <a href="#Journey to Antarctica - part four">https://www.titan.uio.no/blogg/forskerbloggen/2022/journey-antarctica-part-four.html</a>
-            <a href="#Finishing our work in Antarctica">https://www.titan.uio.no/blogg/forskerbloggen/2022/finishing-our-work-antarctica.html</a>
-            <a href="#What happened in between in Antarctica?">https://www.titan.uio.no/blogg/forskerbloggen/2022/what-happened-between-antarctica.html</a>
-            <a href="#A physicist in Antarctica">https://www.titan.uio.no/blogg/forskerbloggen/2022/physicist-antarctica.html</a>
-            <a href="#Settling in at Tor station">https://www.titan.uio.no/blogg/forskerbloggen/2022/settling-tor-station.html</a>
-            <a href="#Birds in the icecold and life at a field-station">https://www.titan.uio.no/blogg/forskerbloggen/2022/life-field-station.html</a>
-            <a href="#Heading back home">https://www.titan.uio.no/blogg/forskerbloggen/2022/heading-back-home.html</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-2.html" target = "_blank">Journey to Antarctica - second update</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-three.html" target = "_blank">Journey to Antarctica - part three</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/journey-antarctica-part-four.html" target = "_blank">Journey to Antarctica - part four</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/finishing-our-work-antarctica.html" target = "_blank">Finishing our work in Antarctica</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/what-happened-between-antarctica.html" target = "_blank">JWhat happened in between in Antarctica?</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/physicist-antarctica.html" target = "_blank">A physicist in Antarctica</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/settling-tor-station.html" target = "_blank">Settling in at Tor station</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/life-field-station.html" target = "_blank">Birds in the icecold and life at a field-station</a>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/heading-back-home.html" target = "_blank">Heading back home</a>
         </p>
 </section>
 
