--- a/facilities.html
+++ b/facilities.html
@@ -17,27 +17,27 @@ title: Research Facilities
             <img src="https://4dspace-uio.github.io/4dspaceweb/img/sydpolen.jpg" width="60%" height="60%"> 
        </br>  
             We invite you to read the interesting travel notes "Journey to Antarctica" by Prof. Wojciech J. Miloch:
-<br>
+<li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica.html" target = "_blank">Journey to Antarctica</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-2.html" target = "_blank">Journey to Antarctica - second update</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2021/journey-antarctica-part-three.html" target = "_blank">Journey to Antarctica - part three</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/journey-antarctica-part-four.html" target = "_blank">Journey to Antarctica - part four</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/finishing-our-work-antarctica.html" target = "_blank">Finishing our work in Antarctica</a>
-</br>  <br>
-<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/what-happened-between-antarctica.html" target = "_blank">JWhat happened in between in Antarctica?</a>
-</br>  <br>
+</li>  <li>
+<a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/what-happened-between-antarctica.html" target = "_blank">What happened in between in Antarctica?</a>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/physicist-antarctica.html" target = "_blank">A physicist in Antarctica</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/settling-tor-station.html" target = "_blank">Settling in at Tor station</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/life-field-station.html" target = "_blank">Birds in the icecold and life at a field-station</a>
-</br>  <br>
+</li>  <li>
 <a href = "https://www.titan.uio.no/blogg/forskerbloggen/2022/heading-back-home.html" target = "_blank">Heading back home</a>
-</br> 
+</li> 
         </p>
 </section>
 
@@ -52,7 +52,9 @@ title: Research Facilities
     <h2>Multi-Needle Langmuir Probes (MNLP)</h2>
     <p>
     Multi-Needle Langmuir Probes (MNLP) measure electron density in plasma on various space probes, e.g. on the ICI rocket series.
+    <br>
     <img src="https://www.mn.uio.no/fysikk/english/research/projects/4dspace/photos_index/mnlp_white.jpeg" width="60%" height="60%">
+    <br/>
     </p>
 </section>
 
