--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ We work with integrated studies of ionospheric plasma and our focus is on multi-
 </div>
 
 <section>
-    <h2>News</h2>
+    <h2>News <img src="/img/new.gif" alt="new"></h2>
     <ul class="news list-unstyled">
         {% for post in site.posts limit: site.front_page_news %}
             {% include news-item.html item=post %}
