--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ We work with integrated studies of ionospheric plasma and our focus is on multi-
 
 <section>
 <!--     <h2>News </h2><img src="/img/new.gif"> -->
-     <h2>News </h2><img src="https://www.fg-a.com/new/0_new2p.gif">
+     <h2>News img src="https://www.fg-a.com/new/0_new2p.gif" </h2>
+<!--     <img src="https://www.fg-a.com/new/0_new2p.gif"> -->
     <ul class="news list-unstyled">
         {% for post in site.posts limit: site.front_page_news %}
             {% include news-item.html item=post %}
