--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@ We work with integrated studies of ionospheric plasma and our focus is on multi-
 <section>
     <h2>News <img src="https://www.fg-a.com/new/0_new2p.gif"> </h2>
     <ul class="news list-unstyled">
-        {% for post in site.posts limit: site.front_page_news %}
+        {% for post in site.posts limit:1 site.front_page_news %}
             {% include news-item.html item=post %}
         {% endfor %}
     </ul>
+   
     {% assign numposts = site.posts | size %}
     {% if numposts >= 1 %}
         <p>
